tests/integration/features/document_grammar/validation/02_invalid_field/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Invalid requirement field: UNREGISTERED
CHECK: Location: {{.*}}input.sdoc:15:1
CHECK: Hint: Compare with the document grammar: [UID, STATEMENT] for type: REQUIREMENT.
